--- a/floorstyles.css
+++ b/floorstyles.css
@@ -349,7 +349,7 @@ a {
 /*Button Styles*/
 a.primary-btn {
   padding: 16px 24px;
-  font-family: "Comic Sans MS", cursive;
+  font-family: "Comic Sans MS";
   font-weight: bold;
   font-size: 20px;
   color: #fff;
