--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@
   --light-section-colors: #eaeaea;
   --text-color: #202020;
   --dark-text-color: #000000;
+  --grey-color: #999999;
 
   /* Font Variables */
   --font-header: "Comic Sans MS";
@@ -248,6 +249,15 @@ section {
 .white {
   color: var(--section-colors);
 }
+
+.grey {
+  background: var(--grey-color);
+}
+
+.bg-section {
+  background: var(--primary-color);
+}
+
 .bg-light {
   background-color: var(--light-section-colors);
 }
@@ -262,7 +272,7 @@ section {
   color: var(--primary-color);
 }
 .prm-2-color {
-  color: var(--light-primary-color);
+  color: var(--highlighter-color);
 }
 
 /* Border & Effects */
@@ -351,8 +361,22 @@ a.primary-btn {
   font-family: var(--font-family);
   font-weight: bold;
   font-size: 20px;
-  color: #fff;
+  color: #02152c;
   background: var(--cta-color);
+  border: 3px solid #000;
+  border-radius: 20px 5px 20px 5px;
+  box-shadow: 6px 6px 0 #000, 8px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: all 0.2s;
+  position: relative;
+}
+
+a.secondary-btn {
+  padding: 16px 24px;
+  font-family: var(--font-family);
+  font-weight: bold;
+  font-size: 20px;
+  color: var(--section-colors);
+  background: var(--primary-color);
   border: 3px solid #000;
   border-radius: 20px 5px 20px 5px;
   box-shadow: 6px 6px 0 #000, 8px 8px 0 rgba(0, 0, 0, 0.2);
@@ -452,6 +476,15 @@ ul.flex-list-wrapper {
   justify-content: center;
   align-items: center;
 }
+.content-box h3::after {
+  content: "";
+  display: block;
+  width: 80px;
+  height: 4px;
+  background: var(--dark-text-color);
+  margin: 1rem auto 0;
+  border-radius: 2px;
+}
 
 li.content-list {
   font-weight: 700;
@@ -518,7 +551,7 @@ h4.content-header {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 1rem;
+  align-self: start;
 }
 .flexbox-end {
   display: flex;
@@ -567,7 +600,7 @@ h4.content-header {
   font-size: 2.5rem;
   font-weight: 700;
   line-height: 1.2;
-  color: var(--primary-color);
+  color: var(--dark-text-color);
   margin-bottom: 1.5rem;
   position: relative;
   display: inline-block;
@@ -619,11 +652,11 @@ h4.content-header {
 }
 
 .info-title {
-    font-size: 2rem;
-    color: var(--highlighter-color);
-    margin-bottom: 15px;
-    position: relative;
-    display: inline-block;
+  font-size: 2rem;
+  color: #024097;
+  margin-bottom: 15px;
+  position: relative;
+  display: inline-block;
 }
 
 .item-card ul li.info-text:last-child {
@@ -633,7 +666,7 @@ h4.content-header {
 .item-card a {
   display: inline-block;
   background-color: transparent;
-  color: var(--highlighter-color);
+  color:#024097;
   text-decoration: none;
   font-weight: 600;
   margin-top: 15px;
@@ -714,9 +747,10 @@ h4.content-header {
   margin-bottom: 40px;
 }
 
-.about-us-hero h2 {
+.about-us-hero h1 {
   color: var(--light-secondary-color);
   margin-bottom: 1rem;
+  font-size: 2rem;
 }
 /* Services Section */
 .services-hero {
@@ -730,9 +764,35 @@ h4.content-header {
   margin-bottom: 40px;
 }
 
-.services-hero h2 {
-  margin-bottom: 1rem;
+.service-text p {
+  font-size: 1.15rem;
+  line-height: 1.7;
+  color: var(--text-color);
+  margin: 0 auto;
+  max-width: 700px;
+  padding-top: 1rem;
 }
+
+.service-text h2 {
+  color:#024097;
+}
+
+.service-text h2::after {
+  content: "";
+  display: block;
+  width: 80px;
+  height: 4px;
+  background:var(--dark-text-color);
+  margin: 1rem auto 0;
+  border-radius: 2px;
+}
+.text-service {
+     font-size: 1.15rem;
+    line-height: 1.7;
+    color: var(--text-color);
+    margin: 0 auto;
+}
+
 
 .services-grid {
   display: grid;
@@ -777,15 +837,14 @@ h4.content-header {
 }
 
 .cta-section {
-  background-color: var(--primary-color);
-  color: white;
   text-align: center;
   padding: 60px 20px;
   margin-top: 40px;
 }
 
-.cta-section h2 {
+.cta-section h4 {
   color: var(--section-colors);
+  font-size: 2rem;
 }
 
 .btn {
@@ -814,13 +873,23 @@ h4.content-header {
 }
 
 h5.service-title {
-  color: var(--primary-color);
+  color: var(--dark-text-color);
   font-weight: 700;
   font-size: 2.2rem;
   margin-bottom: 1.2rem;
   line-height: 1.3;
   letter-spacing: -0.5px;
   text-align: center;
+}
+
+h5.service-title::after {
+  content: "";
+  display: block;
+  width: 80px;
+  height: 4px;
+  background: var(--highlighter-color);
+  margin: 1rem auto 0;
+  border-radius: 2px;
 }
 
 .faq-text {
@@ -1107,7 +1176,7 @@ footer.lgt-sec-bk-color {
 }
 
 .section-title {
-  color: var(--primary-color);
+  color: #023273;
   font-size: 1.1rem;
   font-weight: 600;
   margin-bottom: 15px;
@@ -1146,7 +1215,7 @@ footer.lgt-sec-bk-color {
 }
 
 .contact-link {
-  color: #3a7bff;
+  color:#023273;
   text-decoration: none;
   display: inline-block;
   margin-top: 5px;
