--- a/styles.css
+++ b/styles.css
@@ -1273,7 +1273,7 @@ footer.lgt-sec-bk-color {
     top: 100%;
     left: 0;
     width: 100%;
-    background-color: var(--light-primary-color);
+    background:var(--section-colors);
     flex-direction: column;
     align-items: center;
     gap: 0;
