--- a/styles.css
+++ b/styles.css
@@ -107,8 +107,10 @@ section {
   margin: 0 auto;
 }
 
+
 .iframe-section {
   padding: 0;
+  max-width: 100%;
 }
 
 .container {
@@ -375,6 +377,7 @@ section {
   position: relative;
   z-index: 2;
 }
+
 /* Button Styles */
 a.primary-btn {
   padding: 16px 24px;
